syntax = "proto3";

option go_package = "db_service";

message Task {
  int64 id = 1;
  string title = 2;
  string body = 3;
  bool done = 4;  
}

service DBService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc ListTasks(ListTasksRequest) returns (stream Task) {}
  rpc ActiveTasks(ActiveTasksRequest) returns (stream Task) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}
} 

message CreateTaskRequest {

}

message CreateTaskResponse {
  int64  id = 1;
  string title = 2;
  string body = 3;
  bool done = 4;
}

message ListTasksRequest {

}

message ActiveTasksRequest {

}

message DeleteTaskRequest {

}

message DeleteTaskResponse {

}

message UpdateTaskRequest {
  
}

message UpdateTaskResponse {

}